<resources>
    <string name="app_name">HappyBirthday</string>
    <string name="name_title">Name:</string>
    <string name="hint_name_title">Name of your child</string>
    <string name="birthday_title">Birthday:</string>
    <string name="chooseto_birthday_title">Pick date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_hint">E.g: Nanit</string>
    <string name="date_hint">click here to pick date</string>
    <string name="txt_add_images">Choose Image</string>
    <string name="err_birthday_date">Birthday date can\'t be in the future please setup this field again</string>
    <string name="show_birthday_screen">Show birthday screen</string>
    <string name="folder_title">Folder</string>
    <string name="image_title">Tap to select</string>
    <string name="preference_file_key">birthday_date</string>
</resources>
